--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@
 
 a {
   text-decoration: none; }
+  a:hover {
+    text-decoration: none; }
 
 img {
   display: block;
@@ -83,25 +85,19 @@ button {
 html {
   font-size: 62.5%;
   box-sizing: border-box; }
-  @media (max-width: 1200px) {
-    html {
-      font-size: 60%; } }
-  @media (max-width: 900px) {
-    html {
-      font-size: 55.5%; } }
-  @media (min-width: 1800px) {
-    html {
-      font-size: 75%; } }
 
 body {
   font-family: "Segoe UI" !important;
   font-weight: normal;
-  font-size: 1.6rem;
+  font-weight: 400;
+  font-size: 16px;
   line-height: 1;
-  color: #4d4d4d; }
+  color: #4d4d4d;
+  height: 100%;
+  height: 100vh; }
 
 .text {
-  font-size: 1.5rem;
+  font-size: 15px;
   font-style: italic;
   line-height: 1.4; }
 
@@ -112,106 +108,118 @@ body {
   font-style: normal; }
 
 .paragraph {
-  font-size: 1.6rem; }
+  font-size: 16px; }
   .paragraph:not(:last-child) {
-    margin-bottom: 3rem; }
+    margin-bottom: 30px; }
 
 .title-main {
   color: #2c3133;
-  font-size: 2.6rem;
+  font-size: 26px;
   font-weight: bold;
   text-align: center;
-  margin-bottom: 3.5rem;
-  margin-top: 15rem;
-  line-height: calc(35 / 26); }
+  margin-bottom: 30px;
+  line-height: 35px;
+  margin-top: 150px; }
+
+.sub-title {
+  text-align: center;
+  margin-bottom: 50px; }
+  .sub-title h2 {
+    color: #2c3133;
+    font-size: 26px;
+    font-weight: bold;
+    margin-bottom: 12px;
+    line-height: 35px; }
+  .sub-title p {
+    margin-bottom: 12px;
+    font-size: 14px;
+    line-height: 19px;
+    color: #6d6d6d; }
 
 .pagi {
   display: flex;
   justify-content: center;
-  margin: 0; }
+  margin: 0;
+  margin-bottom: 30px; }
   .pagi-item {
-    margin: 0 0.3rem;
-    padding: 1rem 1.5rem;
-    font-size: 1.4rem;
-    color: #5b6062;
+    margin: 0 3px;
+    text-align: center;
     cursor: pointer;
-    transition: all 0.2s linear;
-    border-radius: 0.6rem;
-    font-family: "Roboto", sans-serif; }
+    transition: all 0.2s linear; }
+    .pagi-item a {
+      font-family: "Roboto", sans-serif;
+      font-size: 14px;
+      color: #5b6062;
+      line-height: 18px;
+      padding: 10px 15px;
+      border-radius: 06px;
+      display: block; }
     .pagi-item.is-disabled {
       color: #c4c4c4;
-      cursor: not-allowed; }
-    .pagi-item:hover, .pagi-item.is-active {
+      pointer-events: none; }
+      .pagi-item.is-disabled i {
+        color: #C4C4C4; }
+    .pagi-item:hover a, .pagi-item.is-active a {
       color: #fff;
-      background-color: #049cd6;
-      border-radius: 0.6rem; }
+      background-color: #049cd6; }
 
 .create-time {
   display: flex;
   align-items: center;
   margin-bottom: 0; }
   .create-time span {
-    padding-left: 1rem;
+    line-height: 20px;
+    padding-left: 10px;
     font-family: "Open Sans";
-    font-size: 1.3rem;
+    font-size: 13px;
     color: #535353; }
-
-.create-time-post {
-  color: #4d555c;
-  padding: 1.5rem 0 1rem;
-  margin-bottom: 0;
-  display: flex;
-  align-items: center;
-  line-height: 3rem; }
-  .create-time-post img {
-    width: 1.5rem !important;
-    height: 1.5rem !important; }
-  .create-time-post span {
-    padding-left: 0.5rem;
-    font-size: 1.2rem;
-    line-height: calc(22 / 12);
-    color: #4d555c;
-    font-weight: 400; }
+  .create-time img {
+    width: 16px !important;
+    height: 16px !important; }
 
 .card-post {
-  margin-bottom: 5rem; }
+  margin-bottom: 50px; }
   .card-post .thumbnail {
     background-color: #c4c4c4;
     display: block; }
   .card-post img {
     width: 100%;
     object-fit: cover;
-    height: 25rem; }
+    height: 250px; }
   .card-post .time {
-    color: #4d555c;
-    padding: 1.3rem 0 0.9rem;
+    padding: 14px 0 10px;
     margin-bottom: 0;
     display: flex;
-    align-items: center;
-    line-height: 3rem; }
+    align-items: center; }
     .card-post .time img {
-      width: auto !important;
-      height: auto !important; }
+      width: 15px !important;
+      height: 15px !important; }
     .card-post .time span {
-      padding-left: 0.5rem;
-      font-size: 1.4rem;
-      line-height: 2.2rem;
+      padding-left: 8px;
+      font-size: 12px;
+      line-height: 22px;
       color: #4d555c;
-      padding-top: 0.2rem; }
+      font-weight: 400; }
   .card-post .title {
-    font-size: 2.2rem;
+    font-size: 22px;
     font-weight: 600;
-    line-height: 3rem;
+    line-height: 30px;
     color: #000;
-    margin-bottom: 1.2rem;
-    text-decoration: none;
-    display: block;
+    margin-bottom: 12px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
+    max-width: 100%;
+    word-break: break-word;
     transition: all 0.2s linear; }
     .card-post .title:hover {
-      color: #00aeef; }
+      color: #00aeef !important; }
   .card-post .desc {
-    font-size: 1.4rem;
-    line-height: 2.4rem;
+    font-size: 14px;
+    line-height: 24px;
     color: #4d4d4d;
     display: -webkit-box;
     -webkit-line-clamp: 3;
@@ -224,52 +232,63 @@ body {
 
 .card-post-horizontal {
   display: flex;
-  margin-bottom: 3rem; }
+  margin-bottom: 30px; }
   .card-post-horizontal .thumbnail {
     display: block;
     flex-shrink: 0; }
     .card-post-horizontal .thumbnail img {
       width: 100%;
-      max-width: 11rem;
-      height: 7rem; }
+      max-width: 110px;
+      height: 70px; }
   .card-post-horizontal .content {
-    padding: 0.2rem 0 0.2rem 1.6rem;
+    padding-left: 16px;
     display: flex;
     flex-direction: column;
     justify-content: space-between; }
     .card-post-horizontal .content .title {
-      font-size: 1.4rem;
+      font-size: 14px;
       color: #262b30;
-      line-height: calc(19 / 14);
+      line-height: 19px;
       display: block;
-      text-decoration: none; }
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      width: 100%;
+      max-width: 100%;
+      word-break: break-word; }
       .card-post-horizontal .content .title:hover {
         color: #00aeef; }
+    .card-post-horizontal .content .create-time img {
+      width: 16.5px !important;
+      height: 16.5px !important; }
 
 .btn-text {
   background-color: #00aeef;
-  color: #fff;
   transition: all 0.2s linear;
   border: none;
-  min-width: 14.2rem;
-  height: 4.4rem;
+  min-width: 142px;
+  height: 44px;
   text-align: center;
-  border-radius: 2rem;
-  font-size: 1.4rem;
-  font-weight: 600;
-  line-height: calc(24 / 14); }
+  border-radius: 20px; }
+  .btn-text a {
+    color: #fff;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 24px; }
   .btn-text:hover, .btn-text:focus {
     outline: none;
     background-color: #0d9dd3; }
 
 .btn-text-xs {
-  min-width: 5.2rem;
-  height: 2.4rem;
+  min-width: 52px;
+  height: 24px;
   text-align: center;
-  border-radius: 0.4rem;
+  border-radius: 4px;
   background-color: #eaeaea;
   color: #54595e;
-  font-size: 1.2rem;
+  font-size: 12px;
   font-weight: 400;
   font-family: "Roboto", sans-serif;
   border: 0; }
@@ -281,152 +300,145 @@ body {
   display: flex;
   justify-content: center; }
   .head-content .list-cate li a {
-    font-size: 1.8rem;
+    font-size: 18px;
     color: #b0b0b0;
-    padding: 0rem 2.5rem;
+    padding: 0 25px;
     display: block;
     position: relative;
+    line-height: 24px;
     transition: all 0.2s linear; }
     .head-content .list-cate li a::after {
       content: "";
       position: absolute;
-      top: 0rem;
-      right: -0.2px;
-      width: 0.1rem;
-      height: 1.8rem;
+      top: 2px;
+      right: -2px;
+      width: 1px;
+      height: 20px;
       background-color: #c6c6c6;
       transition: all 0.2s linear; }
-    .head-content .list-cate li a.active {
-      color: #242829;
+    .head-content .list-cate li a::before {
+      content: "";
+      position: absolute;
+      top: 30px;
+      width: 50px;
+      height: 2px;
+      background-color: transparent;
+      left: 50%;
+      transform: translateX(-50%);
       transition: all 0.2s linear; }
-      .head-content .list-cate li a.active::before {
-        content: "";
-        position: absolute;
-        top: 2.8rem;
-        width: 5rem;
-        height: 0.2rem;
-        background-color: #00aeef;
-        left: 50%;
-        transform: translateX(-50%);
-        transition: all 0.2s linear; }
-    .head-content .list-cate li a:hover {
-      text-decoration: none;
+    .head-content .list-cate li a.active, .head-content .list-cate li a:hover {
       color: #242829; }
-      .head-content .list-cate li a:hover::before {
-        content: "";
-        position: absolute;
-        top: 3rem;
-        width: 5rem;
-        height: 0.2rem;
-        background-color: #00aeef;
-        left: 50%;
-        transform: translateX(-50%); }
+      .head-content .list-cate li a.active::before, .head-content .list-cate li a:hover::before {
+        transition: all 0.2s linear;
+        background-color: #00aeef; }
+    .head-content .list-cate li a.active {
+      pointer-events: none; }
   .head-content .list-cate li:last-child a::after {
     display: none; }
 
-.main-content {
-  margin-top: 6rem; }
+.list-project {
+  margin-top: 60px; }
 
 @media screen and (max-width: 575px) {
   .head-content .list-cate {
     flex-wrap: wrap; }
     .head-content .list-cate li a {
-      max-width: 14rem;
-      margin-bottom: 2.5rem;
-      padding: 0rem 1.7rem;
+      max-width: 140px;
+      margin-bottom: 25px;
+      padding: 0 17px;
       text-align: center; }
       .head-content .list-cate li a.active::before {
-        top: 2.7rem;
-        width: 4.5rem; }
-  .main-content {
-    margin-top: 2rem; }
-    .main-content .item {
-      margin-bottom: 3rem; } }
+        top: 27px;
+        width: 45px; }
+  .list-project {
+    margin-top: 20px; }
+    .list-project .item {
+      margin-bottom: 30px; } }
 
 .wp-breadcumb {
   background-color: #f1f7fa;
-  margin-top: 12.7rem;
-  margin-bottom: 5rem; }
+  margin-top: 127px;
+  margin-bottom: 50px; }
   .wp-breadcumb .breadcrumb {
     background-color: transparent; }
     .wp-breadcumb .breadcrumb-item + .breadcrumb-item::before {
       content: "\f054";
       font-family: "FontAwesome";
-      padding: 0 1.3rem;
-      font-size: 1rem; }
+      padding: 0 13px;
+      font-size: 10px; }
     .wp-breadcumb .breadcrumb-item {
-      height: 4.4rem;
-      line-height: 4.4rem;
+      height: 44px;
+      line-height: 44px;
       padding-left: 0; }
       .wp-breadcumb .breadcrumb-item img {
         display: unset;
-        transform: translateY(-0.3rem); }
+        transform: translateY(-3px); }
       .wp-breadcumb .breadcrumb-item a {
-        font-size: 1.4rem;
+        font-size: 14px;
         color: #0f629a; }
     .wp-breadcumb .breadcrumb-item.active {
       color: #2b4052; }
 
 .content-title {
-  font-size: 4.8rem;
+  font-size: 48px;
   font-weight: bold;
   color: #262b30;
-  margin-bottom: 1rem;
-  line-height: 6.4rem; }
+  margin-bottom: 10px;
+  line-height: 64px; }
 
 .content-desc {
-  margin: 3rem 0 2.5rem; }
+  margin: 30px 0 25px; }
   .content-desc p {
     font-weight: bold;
     color: #262b30;
-    margin-bottom: 1.5rem;
-    font-size: 1.5rem; }
+    margin-bottom: 14px;
+    font-size: 15px; }
     .content-desc p span {
       font-weight: normal; }
   .content-desc .auth {
-    margin-bottom: 2.5rem;
-    font-size: 1.8rem; }
+    margin-bottom: 23px;
+    font-size: 18px; }
 
 .content-main img {
   max-width: 100%;
   object-fit: cover; }
 
 .content-main p {
-  font-size: 1.4rem;
-  line-height: 2.8rem;
-  margin-bottom: 2.4rem; }
+  font-size: 14px;
+  line-height: 28px;
+  margin-bottom: 24px; }
 
 .content-main h4 {
   font-weight: bold;
   font-size: 18px;
   line-height: 28px;
-  margin-bottom: 1.2rem; }
+  margin-bottom: 12px; }
 
 .content-main img {
-  margin: 3rem 0; }
+  margin: 30px 0; }
 
 .sidebar {
-  margin-top: 2rem; }
+  margin-top: 20px; }
   .sidebar-title {
     color: #262b30;
-    font-size: 2.8rem;
+    font-size: 28px;
     font-weight: 600;
-    line-height: calc(37 / 28);
-    padding-bottom: 1.7rem;
+    line-height: 37px;
+    padding-bottom: 15px;
     border-bottom: 1px solid #d6d6d6;
-    margin-bottom: 1.6rem; }
+    margin-bottom: 20px; }
   .sidebar .see-more {
-    margin-top: 3.8rem; }
+    margin-top: 38px; }
 
 .project-relative {
-  margin-top: 3rem; }
+  margin-top: 30px; }
   .project-relative-title {
     color: #262b30;
     font-style: normal;
     font-weight: bold;
-    font-size: 2.8rem;
-    line-height: 3.7rem;
-    margin-bottom: 3rem; }
+    font-size: 28px;
+    line-height: 37px;
+    margin-bottom: 30px; }
   .project-relative-slider .owl-nav {
     display: block !important;
     position: absolute;
@@ -435,56 +447,75 @@ body {
     transform: translateY(-50%);
     margin: 0; }
     .project-relative-slider .owl-nav .owl-prev {
-      left: -7.8rem;
-      position: absolute;
-      color: #230b34 !important;
-      background: #f0f3f4 !important;
-      width: 4.4rem;
-      height: 4.4rem;
-      border-radius: 50% !important; }
-      .project-relative-slider .owl-nav .owl-prev:focus {
-        outline: none; }
-      .project-relative-slider .owl-nav .owl-prev:hover {
-        background: #d9d9d9 !important; }
+      left: -78px; }
     .project-relative-slider .owl-nav .owl-next {
-      right: -7.8rem;
+      right: -78px; }
+    .project-relative-slider .owl-nav .owl-prev,
+    .project-relative-slider .owl-nav .owl-next {
       position: absolute;
-      color: #230b34 !important;
       background: #f0f3f4 !important;
-      width: 4.4rem;
-      height: 4.4rem;
-      border-radius: 50% !important; }
+      width: 44px;
+      height: 44px;
+      border-radius: 50% !important;
+      color: #230b34 !important; }
+      .project-relative-slider .owl-nav .owl-prev:focus,
       .project-relative-slider .owl-nav .owl-next:focus {
         outline: none; }
+      .project-relative-slider .owl-nav .owl-prev:hover,
       .project-relative-slider .owl-nav .owl-next:hover {
         background: #d9d9d9 !important; }
+      .project-relative-slider .owl-nav .owl-prev img,
+      .project-relative-slider .owl-nav .owl-next img {
+        margin: 0 auto; }
   .project-relative-slider .owl-dots {
     display: block !important;
     margin-top: 0 !important;
     position: relative;
-    top: -2rem; }
+    top: -20px; }
     .project-relative-slider .owl-dots .owl-dot:focus {
       outline: none; }
     .project-relative-slider .owl-dots .owl-dot.active span, .project-relative-slider .owl-dots .owl-dot:hover span {
       background-color: #00aeef !important; }
     .project-relative-slider .owl-dots .owl-dot span {
-      width: 0.8rem !important;
-      height: 0.8rem !important; }
+      width: 8px !important;
+      height: 8px !important; }
 
 @media screen and (max-width: 575px) {
   .wp-breadcumb {
-    margin-bottom: 3rem; }
+    margin-bottom: 30px; }
   .content-title {
-    font-size: 4rem; }
+    font-size: 40px; }
   .project-relative-slider .owl-nav {
     display: none !important; } }
 
+.view-detail {
+  color: #1d71b9;
+  font-family: "Roboto", sans-serif;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+  max-width: 130px; }
+  .view-detail img {
+    display: inline;
+    padding-left: 8px;
+    width: auto !important;
+    height: auto !important; }
+  .view-detail:hover {
+    color: #0d9dd3; }
+
+.wp-newest .title-main {
+  margin-bottom: 50px; }
+
+.wp-newest-inner {
+  display: flex; }
+
 .wp-newest .thumbnail {
-  display: block; }
+  display: block;
+  padding-right: 15px; }
   .wp-newest .thumbnail img {
-    width: 100%;
-    height: 41rem;
-    border-radius: 2rem; }
+    width: 630px;
+    height: 410px;
+    border-radius: 20px; }
 
 .wp-newest-content {
   display: flex;
@@ -493,37 +524,85 @@ body {
   justify-content: space-between; }
 
 .wp-newest .btn-newest {
-  margin-bottom: 1.7rem; }
+  margin-bottom: 17px; }
 
 .wp-newest .time-newest {
   padding: 0; }
+  .wp-newest .time-newest img {
+    width: 15px !important;
+    height: 15px !important; }
+  .wp-newest .time-newest span {
+    font-family: "Segoe UI";
+    font-size: 12px;
+    line-height: 12px;
+    color: #4d555c;
+    padding-left: 7px; }
 
 .wp-newest .title {
   font-family: "Roboto", sans-serif;
   color: #000;
   font-weight: 500;
-  font-size: 3.2rem;
-  line-height: calc(42 / 32);
-  margin-bottom: 2rem;
-  margin-top: 0.8rem; }
+  font-size: 32px;
+  line-height: 42px;
+  margin-bottom: 20px;
+  margin-top: 8px; }
 
 .wp-newest .desc {
   font-family: "Roboto", sans-serif;
   font-weight: normal;
-  font-size: 1.6rem;
-  line-height: calc(26 / 16);
+  font-size: 16px;
+  line-height: 26px;
   color: #3c4349; }
 
-.wp-newest .view-detail {
-  color: #1d71b9;
-  font-family: "Roboto", sans-serif;
-  font-weight: normal;
-  font-size: 1.4rem;
-  line-height: calc(18 / 14);
-  text-decoration: none;
-  padding-right: 1rem; }
-  .wp-newest .view-detail img {
-    display: inline;
-    padding-left: 1rem; }
-  .wp-newest .view-detail:hover {
-    color: #0d9dd3; }
+.list-new {
+  margin-top: 50px; }
+  .list-new .card-post .thumbnail {
+    border-radius: 20px; }
+    .list-new .card-post .thumbnail img {
+      border-radius: 20px;
+      height: 240px; }
+  .list-new .card-post .time {
+    padding-top: 20px;
+    padding-bottom: 5px; }
+  .list-new .card-post .title {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 27px;
+    color: #000;
+    font-family: "Roboto", sans-serif;
+    margin-bottom: 18px; }
+  .list-new .card-post .desc {
+    font-family: "Roboto", sans-serif;
+    line-height: 22px;
+    margin-bottom: 12px; }
+
+.pagi.pagi-list-new {
+  transform: translateY(-15px);
+  margin-bottom: 120px; }
+
+.customer {
+  padding-bottom: 150px; }
+  .customer-item {
+    background: #ffffff;
+    border: 1px solid #e2e2e2;
+    border-radius: 12px;
+    height: 120px; }
+    .customer-item img {
+      width: auto !important;
+      height: auto !important;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); }
+  .customer .owl-dots {
+    display: block !important;
+    margin-top: 0 !important;
+    position: relative;
+    top: -22px; }
+    .customer .owl-dots .owl-dot:focus {
+      outline: none; }
+    .customer .owl-dots .owl-dot.active span, .customer .owl-dots .owl-dot:hover span {
+      background-color: #00aeef !important; }
+    .customer .owl-dots .owl-dot span {
+      width: 8px !important;
+      height: 8px !important; }
