--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -43,27 +43,15 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box;
-
-  @include respond(tab-land) {
-    // font-size: 56.25%; //1rem =9px
-    font-size: 60%;
-  }
-
-  @include respond(tab-port) {
-    // font-size: 50%; //1 rem = 8px
-    font-size: 55.5%;
-  }
-
-  @include respond(big-desktop) {
-    font-size: 75%; //1rem = 12px
-  }
 }
 body {
   font-family: "Segoe UI" !important;
   font-weight: normal;
-  // font-weight: bold;
-  //   font-style: normal;
-  font-size: 1.6rem;
+  font-weight: 400;
+  font-size: 16px;
   line-height: 1;
   color: $color-text-secondary;
+  height: 100%;
+  height: 100vh;
+
 }
