--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,6 +1,6 @@
 .text {
   // font-family: $second-font;
-  font-size: 1.5rem;
+  font-size: 15px;
   font-style: italic;
   // color: $text-color;
   line-height: 1.4;
@@ -12,8 +12,8 @@
   font-style: normal;
 }
 .paragraph {
-  font-size: 1.6rem;
+  font-size: 16px;
   &:not(:last-child) {
-    margin-bottom: 3rem;
+    margin-bottom: 30px;
   }
 }
