--- a/sass/components/_card-post-horizontal.scss
+++ b/sass/components/_card-post-horizontal.scss
@@ -1,28 +1,33 @@
 .card-post-horizontal {
   display: flex;
-  margin-bottom: 3rem;
+  margin-bottom: 30px;
   .thumbnail {
     display: block;
     flex-shrink: 0;
     img {
       width: 100%;
-      max-width: 11rem;
-      height: 7rem;
+      max-width: 110px;
+      height: 70px;
     }
   }
   .content {
-    padding: 0.2rem 0 0.2rem 1.6rem;
+    padding-left: 16px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     .title {
-      font-size: 1.4rem;
+      font-size: 14px;
       color: #262b30;
-      line-height: calc(19 / 14);
+      line-height: 19px;
       display: block;
-      text-decoration: none;
+      @include textClamp(2);
       &:hover {
         color: $primary-color;
+      }
+    }
+    .create-time {
+      img {
+        @include size(16.5px);
       }
     }
   }
