--- a/sass/components/_card-post.scss
+++ b/sass/components/_card-post.scss
@@ -1,5 +1,5 @@
 .card-post {
-  margin-bottom: 5rem;
+  margin-bottom: 50px;
   .thumbnail {
     background-color: $color-light-gray;
     display: block;
@@ -7,42 +7,39 @@
   img {
     width: 100%;
     object-fit: cover;
-    height: 25rem;
+    height: 250px;
   }
   .time {
-    color: $color-text-third;
-    padding: 1.3rem 0 0.9rem;
+    padding: 14px 0 10px;
     margin-bottom: 0;
     display: flex;
     align-items: center;
-    line-height: 3rem;
     img {
-      @include size(auto);
+      @include size(15px);
     }
     span {
-      padding-left: 0.5rem;
-      font-size: 1.4rem;
-      line-height: 2.2rem;
+      padding-left: 8px;
+      font-size: 12px;
+      line-height: 22px;
       color: $color-text-third;
-      padding-top: 0.2rem;
+      font-weight: 400;
     }
   }
   .title {
-    font-size: 2.2rem;
+    font-size: 22px;
     font-weight: 600;
-    line-height: 3rem;
+    line-height: 30px;
     color: $color-text-primary;
-    margin-bottom: 1.2rem;
-    text-decoration: none;
-    display: block;
+    margin-bottom: 12px;
+    @include textClamp(2);
     @include transition;
     &:hover {
-      color: $primary-color;
+      color: $primary-color !important;
     }
   }
   .desc {
-    font-size: 1.4rem;
-    line-height: 2.4rem;
+    font-size: 14px;
+    line-height: 24px;
     color: $color-text-secondary;
     @include textClamp(3);
   }
