--- a/sass/components/_title_main.scss
+++ b/sass/components/_title_main.scss
@@ -1,9 +1,26 @@
 .title-main {
   color: $color-dusky;
-  font-size: 2.6rem;
+  font-size: 26px;
   font-weight: bold;
   text-align: center;
-  margin-bottom: 3.5rem;
-  margin-top: 15rem;
-  line-height: calc(35 / 26);
+  margin-bottom: 30px;
+  line-height: 35px;
+  margin-top: 150px;
+}
+.sub-title {
+  text-align: center;
+  margin-bottom: 50px;
+  h2 {
+    color: $color-dusky;
+    font-size: 26px;
+    font-weight: bold;
+    margin-bottom: 12px;
+    line-height: 35px;
+  }
+  p {
+    margin-bottom: 12px;
+    font-size: 14px;
+    line-height: 19px;
+    color: #6d6d6d;
+  }
 }
