--- a/sass/pages/_news.scss
+++ b/sass/pages/_news.scss
@@ -1,11 +1,33 @@
+.view-detail {
+  color: #1d71b9;
+  font-family: "Roboto", sans-serif;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+  max-width: 130px;
+  img {
+    display: inline;
+    padding-left: 8px;
+    @include size(auto);
+  }
+  &:hover {
+    color: #0d9dd3;
+  }
+}
 .wp-newest {
+  .title-main {
+    margin-bottom: 50px;
+  }
+  &-inner {
+    display: flex;
+  }
   .thumbnail {
     display: block;
-    // flex-shrink: 0;
+    padding-right: 15px;
     img {
-      width: 100%;
-      height: 41rem;
-      border-radius: 2rem;
+      width: 630px;
+      height: 410px;
+      border-radius: 20px;
     }
   }
   &-content {
@@ -15,41 +37,103 @@
     justify-content: space-between;
   }
   .btn-newest {
-    margin-bottom: 1.7rem;
+    margin-bottom: 17px;
   }
   .time-newest {
     padding: 0;
+    img {
+      @include size(15px);
+    }
+    span {
+      font-family: "Segoe UI";
+      font-size: 12px;
+      line-height: 12px;
+      color: #4d555c;
+      padding-left: 7px;
+    }
   }
   .title {
     font-family: "Roboto", sans-serif;
     color: $color-text-primary;
     font-weight: 500;
-    font-size: 3.2rem;
-    line-height: calc(42 / 32);
-    margin-bottom: 2rem;
-    margin-top: 0.8rem;
+    font-size: 32px;
+    line-height: 42px;
+    margin-bottom: 20px;
+    margin-top: 8px;
   }
   .desc {
     font-family: "Roboto", sans-serif;
     font-weight: normal;
-    font-size: 1.6rem;
-    line-height: calc(26 / 16);
+    font-size: 16px;
+    line-height: 26px;
     color: #3c4349;
   }
-  .view-detail {
-    color: #1d71b9;
-    font-family: "Roboto", sans-serif;
-    font-weight: normal;
-    font-size: 1.4rem;
-    line-height: calc(18 / 14);
-    text-decoration: none;
-    padding-right: 1rem;
-    img {
-      display: inline;
-      padding-left: 1rem;
+}
+.list-new {
+  margin-top: 50px;
+  .card-post {
+    .thumbnail {
+      border-radius: 20px;
+      img {
+        border-radius: 20px;
+        height: 240px;
+      }
     }
-    &:hover {
-      color: #0d9dd3;
+    .time {
+      padding-top: 20px;
+      padding-bottom: 5px;
+    }
+    .title {
+      font-size: 18px;
+      font-weight: 500;
+      line-height: 27px;
+      color: #000;
+      font-family: "Roboto", sans-serif;
+      margin-bottom: 18px;
+    }
+    .desc {
+      font-family: "Roboto", sans-serif;
+      line-height: 22px;
+      margin-bottom: 12px;
+    }
+  }
+}
+.pagi.pagi-list-new {
+  transform: translateY(-15px);
+  margin-bottom: 120px;
+}
+.customer {
+  padding-bottom: 150px;
+  &-slider {
+  }
+  &-item {
+    background: #ffffff;
+    border: 1px solid #e2e2e2;
+    border-radius: 12px;
+    height: 120px;
+    img {
+      @include size(auto);
+      @include absCenter;
+    }
+  }
+  .owl-dots {
+    display: block !important;
+    margin-top: 0 !important;
+    position: relative;
+    top: -22px;
+    .owl-dot {
+      &:focus {
+        outline: none;
+      }
+      &.active,
+      &:hover {
+        span {
+          background-color: $primary-color !important;
+        }
+      }
+      span {
+        @include size(8px);
+      }
     }
   }
 }
