--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,3 +22,5 @@
 @import "./pages/projects";
 @import "./pages/project-detail";
 @import "./pages/news";
+@import "./pages/new-detail";
+@import "./pages/contact";
