--- a/sass/pages/_news.scss
+++ b/sass/pages/_news.scss
@@ -23,11 +23,14 @@
   }
   .thumbnail {
     display: block;
-    padding-right: 15px;
+    margin-right: 15px;
+    width: 630px;
+    flex-shrink: 0;
     img {
-      width: 630px;
+      width: 100%;
       height: 410px;
-      border-radius: 20px;
+      max-width: 630px;
+      object-fit: cover;
     }
   }
   &-content {
@@ -37,7 +40,7 @@
     justify-content: space-between;
   }
   .btn-newest {
-    margin-bottom: 17px;
+    margin-bottom: 20px;
   }
   .time-newest {
     padding: 0;
@@ -49,7 +52,7 @@
       font-size: 12px;
       line-height: 12px;
       color: #4d555c;
-      padding-left: 7px;
+      padding-left: 8px;
     }
   }
   .title {
@@ -59,7 +62,12 @@
     font-size: 32px;
     line-height: 42px;
     margin-bottom: 20px;
-    margin-top: 8px;
+    margin-top: 13px;
+    display: block;
+    @include transition;
+    &:hover {
+      color: $primary-color;
+    }
   }
   .desc {
     font-family: "Roboto", sans-serif;
@@ -73,15 +81,16 @@
   margin-top: 50px;
   .card-post {
     .thumbnail {
-      border-radius: 20px;
       img {
-        border-radius: 20px;
         height: 240px;
       }
     }
     .time {
       padding-top: 20px;
       padding-bottom: 5px;
+      span {
+        padding-left: 12px;
+      }
     }
     .title {
       font-size: 18px;
@@ -94,18 +103,16 @@
     .desc {
       font-family: "Roboto", sans-serif;
       line-height: 22px;
-      margin-bottom: 12px;
+      margin-bottom: 10px;
     }
   }
 }
 .pagi.pagi-list-new {
-  transform: translateY(-15px);
+  transform: translateY(-12px);
   margin-bottom: 120px;
 }
 .customer {
   padding-bottom: 150px;
-  &-slider {
-  }
   &-item {
     background: #ffffff;
     border: 1px solid #e2e2e2;
@@ -120,7 +127,7 @@
     display: block !important;
     margin-top: 0 !important;
     position: relative;
-    top: -22px;
+    top: 25px;
     .owl-dot {
       &:focus {
         outline: none;
@@ -133,6 +140,74 @@
       }
       span {
         @include size(8px);
+      }
+    }
+  }
+}
+@include maxWidth(1024px) {
+  .wp-newest {
+    .title-main {
+      margin-bottom: 30px;
+    }
+    &-inner {
+      flex-wrap: wrap;
+    }
+    .thumbnail {
+      margin-right: 0;
+      width: 100%;
+      img {
+        width: 100%;
+        height: 500px;
+        max-width: 100%;
+      }
+    }
+    &-content {
+      margin-top: 20px;
+      display: block;
+    }
+    .btn-newest {
+      margin-bottom: 10px;
+    }
+    .title {
+      font-size: 27px;
+    }
+  }
+  .list-new {
+    margin-top: 35px;
+    .card-post {
+      margin-bottom: 25px;
+      .thumbnail {
+        border-radius: 15px;
+        img {
+          border-radius: 15px;
+          height: 200px;
+        }
+      }
+      .time {
+        padding-top: 10px;
+      }
+      .title {
+        margin-bottom: 10px;
+      }
+    }
+  }
+  .pagi.pagi-list-new {
+    transform: translateY(0);
+    margin-bottom: 60px;
+  }
+  .customer {
+    &-item {
+      height: 100px;
+    }
+  }
+}
+@include maxWidth(575px) {
+  .wp-newest {
+    .thumbnail {
+      img {
+        width: 100%;
+        height: 280px;
+        max-width: 100%;
       }
     }
   }
