--- a/sass/components/_title_main.scss
+++ b/sass/components/_title_main.scss
@@ -5,11 +5,11 @@
   text-align: center;
   margin-bottom: 30px;
   line-height: 35px;
-  margin-top: 150px;
 }
 .sub-title {
   text-align: center;
   margin-bottom: 50px;
+  position: relative;
   h2 {
     color: $color-dusky;
     font-size: 26px;
@@ -22,5 +22,92 @@
     font-size: 14px;
     line-height: 19px;
     color: #6d6d6d;
+  }
+  .bg-left {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    .bg-top,
+    .bg-bottom {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      &::before,
+      &::after {
+        content: "";
+        position: absolute;
+        border-radius: 4px;
+      }
+    }
+    .bg-top {
+      &::before {
+        top: -35px;
+        left: 155px;
+        @include size(9px, 10px);
+        background-color: #a4e6ff;
+      }
+      &::after {
+        top: -13px;
+        left: 222px;
+        background-color: #62d4ff;
+        @include size(14px);
+      }
+    }
+    .bg-bottom {
+      &::before {
+        top: 8px;
+        left: 181px;
+        @include size(21px);
+        background-color: #00aeef;
+        border-radius: 6px;
+      }
+      &::after {
+        top: 35px;
+        left: 110px;
+        background-color: #a4e6ff;
+        @include size(14px, 15px);
+      }
+    }
+  }
+}
+@include maxWidth(575px) {
+  .sub-title {
+    margin-bottom: 25px;
+    .bg-left {
+      .bg-top,
+      .bg-bottom {
+        &::before,
+        &::after {
+          border-radius: 3px;
+        }
+      }
+      .bg-top {
+        &::before {
+          top: -25px;
+          left: 45px;
+          @include size(7px, 8px);
+        }
+        &::after {
+          top: -13px;
+          left: 120px;
+          @include size(13px);
+        }
+      }
+      .bg-bottom {
+        &::before {
+          top: 15px;
+          left: 85px;
+          @include size(16px);
+          border-radius: 4px;
+        }
+        &::after {
+          top: 30px;
+          left: 30px;
+          @include size(12px, 13px);
+        }
+      }
+    }
   }
 }
