--- a/sass/pages/_projects.scss
+++ b/sass/pages/_projects.scss
@@ -1,3 +1,6 @@
+header {
+  height: 150px;
+}
 .head-content {
   .list-cate {
     list-style: none;
@@ -57,7 +60,7 @@
   margin-top: 60px;
 }
 
-@include maxWidth(575px) {
+@include maxWidth(1024px) {
   .head-content {
     .list-cate {
       flex-wrap: wrap;
@@ -79,8 +82,12 @@
   }
   .list-project {
     margin-top: 20px;
-    .item {
+    .card-post {
       margin-bottom: 30px;
+      .time {
+        padding: 10px 0 7px;
+        // 14px 0 10px
+      }
     }
   }
 }
