--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,3 +24,5 @@
 @import "./pages/news";
 @import "./pages/new-detail";
 @import "./pages/contact";
+@import "./pages/rooms";
+@import "./pages/room-detail";
