--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,6 +4,7 @@ $secondary-color: #e6920c;
 $color-text-primary: #000;
 $color-text-secondary: #4d4d4d;
 $color-text-third: #4d555c;
+$color-text-fourth: #262b30;
 
 $color-dark: #242829;
 $color-dusky: #2c3133;
