--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -23,3 +23,12 @@
     border-radius: 20px;
   }
 }
+.mb-20 {
+  margin-bottom: 20px !important;
+}
+.mt-20 {
+  margin-top: 20px !important;
+}
+.mt-30 {
+  margin-top: 30px !important;
+}
