--- a/sass/pages/_new-detail.scss
+++ b/sass/pages/_new-detail.scss
@@ -10,17 +10,31 @@
     margin: 30px 0;
   }
   .content-main {
+    h4 {
+      margin-top: 30px;
+      margin-bottom: 16px;
+    }
     p {
+      margin-bottom: 12px;
+      span {
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 28px;
+      }
+    }
+    h5 {
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 28px;
       margin-bottom: 12px;
     }
   }
 }
 
 .new-relative {
-  // margin-top: 2180px;
-  margin-top: 30px;
+  margin-top: 58px;
   &-title {
-    color: #262b30;
+    color: $color-text-fourth;
     font-style: normal;
     font-weight: bold;
     font-size: 28px;
