--- a/sass/pages/_project-detail.scss
+++ b/sass/pages/_project-detail.scss
@@ -33,7 +33,7 @@
   &-title {
     font-size: 48px;
     font-weight: bold;
-    color: #262b30;
+    color: $color-text-fourth;
     margin-bottom: 10px;
     line-height: 64px;
   }
@@ -41,7 +41,7 @@
     margin: 30px 0 25px;
     p {
       font-weight: bold;
-      color: #262b30;
+      color: $color-text-fourth;
       margin-bottom: 14px;
       font-size: 15px;
       span {
@@ -62,6 +62,7 @@
       font-size: 14px;
       line-height: 28px;
       margin-bottom: 24px;
+      color: $color-text-fourth;
     }
     h4 {
       font-weight: bold;
@@ -77,7 +78,7 @@
 .sidebar {
   margin-top: 20px;
   &-title {
-    color: #262b30;
+    color: $color-text-fourth;
     font-size: 28px;
     font-weight: 600;
     line-height: 37px;
@@ -94,7 +95,7 @@
   // margin-top: 136px;
   margin-top: 30px;
   &-title {
-    color: #262b30;
+    color: $color-text-fourth;
     font-style: normal;
     font-weight: bold;
     font-size: 28px;
