page product - cate product

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,9 +11,8 @@
 @import "./components/create-time";
 @import "./components/card-post";
 @import "./components/card-post-horizontal";
+@import "./components/product-list";
 @import "./components/buttons";
-@import "./components/card";
-@import "./components/form";
 
 @import "./layout/header";
 @import "./layout/footer";
@@ -26,3 +25,5 @@
 @import "./pages/contact";
 @import "./pages/rooms";
 @import "./pages/room-detail";
+@import "./pages/products";
+@import "./pages/product-cate";
