--- a/css/style.css
+++ b/css/style.css
@@ -335,6 +335,95 @@ body {
       width: 16.5px !important;
       height: 16.5px !important; }
 
+.list-product {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; }
+
+.product-item {
+  width: calc(25% - 15px);
+  margin-bottom: 50px; }
+
+.product-item:nth-child(n + 13) {
+  margin-bottom: 38px; }
+
+.product-thumbnail {
+  display: block;
+  margin-bottom: 12px; }
+  .product-thumbnail img {
+    width: 100%;
+    height: 278px;
+    object-fit: contain; }
+
+.product-name {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 19px;
+  color: #2d3436;
+  margin-bottom: 8px;
+  text-align: center;
+  display: block;
+  transition: all 0.2s linear; }
+  .product-name:hover {
+    color: #00aeef; }
+
+.product-price {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 44px; }
+  .product-price-old {
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 16px;
+    text-decoration: line-through;
+    color: #7b7e81;
+    margin-bottom: 8px; }
+  .product-price-current {
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 20px;
+    text-align: center;
+    color: #000;
+    margin-bottom: 0; }
+
+@media screen and (max-width: 575px) {
+  .product-item {
+    width: calc(33.33% - 15px);
+    margin-bottom: 30px; }
+  .product-item:nth-child(n + 13) {
+    margin-bottom: 30px; }
+  .product-thumbnail img {
+    height: auto; }
+  .product-name {
+    font-size: 13px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
+    max-width: 100%;
+    word-break: break-word;
+    height: 38px; }
+  .product-price {
+    height: 44px; }
+    .product-price-old {
+      font-weight: 600;
+      font-size: 12px;
+      line-height: 16px;
+      text-decoration: line-through;
+      color: #7b7e81;
+      margin-bottom: 8px; }
+    .product-price-current {
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 20px;
+      text-align: center;
+      color: #000;
+      margin-bottom: 0; } }
+
 .btn-text {
   background-color: #00aeef;
   transition: all 0.2s linear;
@@ -368,6 +457,9 @@ body {
 
 header {
   height: 0px; }
+
+footer {
+  height: 150px; }
 
 .head-content .list-cate {
   list-style: none;
@@ -1229,3 +1321,160 @@ header {
     margin-top: 69px; }
     .room-relative-slider .owl-nav {
       display: none !important; } }
+
+.title-product-cate {
+  margin-bottom: 60px; }
+
+.product-cate {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; }
+  .product-cate-item {
+    width: calc(25% - 15px);
+    margin-bottom: 50px; }
+    .product-cate-item .thumbnail {
+      display: block; }
+      .product-cate-item .thumbnail img {
+        width: 100%;
+        height: 278px; }
+    .product-cate-item h3 {
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 24px;
+      color: #2d3436;
+      margin-top: 16px;
+      margin-bottom: 0;
+      text-align: center; }
+
+.product-highlight-title {
+  text-align: center; }
+
+.product-highlight-tab {
+  margin: 16px 0 30px;
+  display: flex;
+  justify-content: center; }
+  .product-highlight-tab span {
+    display: block;
+    color: #b0b0b0;
+    font-size: 18px;
+    line-height: 24px;
+    padding: 0 15px;
+    transition: all 0.2s linear; }
+    .product-highlight-tab span:hover {
+      color: #242829; }
+    .product-highlight-tab span.active {
+      color: #242829;
+      position: relative;
+      pointer-events: none; }
+      .product-highlight-tab span.active::after {
+        content: "";
+        position: absolute;
+        bottom: -8px;
+        left: 50%;
+        transform: translateX(-50%);
+        height: 2px;
+        width: 60px;
+        background-color: #00aeef; }
+  .product-highlight-tab .reivew-best {
+    position: relative; }
+    .product-highlight-tab .reivew-best::before, .product-highlight-tab .reivew-best::after {
+      content: "";
+      position: absolute;
+      height: 18px;
+      width: 1px;
+      background-color: #c6c6c6;
+      top: 7px; }
+    .product-highlight-tab .reivew-best::before {
+      right: 0; }
+    .product-highlight-tab .reivew-best::after {
+      left: 0; }
+
+.product-highlight .btn-text {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%); }
+
+.register-advise {
+  background-color: #f8f8f8;
+  padding: 55px 0;
+  margin-top: 70px;
+  margin-bottom: 105px; }
+
+.register-title {
+  text-align: center; }
+  .register-title .title-main {
+    margin-bottom: 12px; }
+  .register-title p {
+    font-size: 14px;
+    line-height: 19px;
+    color: #6d6d6d;
+    margin-bottom: 0; }
+
+@media screen and (max-width: 960px) {
+  .title-product-cate {
+    margin-bottom: 40px; } }
+
+@media screen and (max-width: 575px) {
+  .product-cate {
+    justify-content: flex-start;
+    margin: 0 -8px; }
+    .product-cate-item {
+      width: calc(33.33% - 16px);
+      margin: 0 8px 20px 8px;
+      margin-bottom: 20px; }
+      .product-cate-item .thumbnail img {
+        height: auto; }
+      .product-cate-item h3 {
+        font-weight: 600;
+        font-size: 16px;
+        margin-top: 10px; }
+  .product-highlight {
+    margin-top: 30px;
+    margin-bottom: 20px; }
+    .product-highlight .title-main {
+      font-size: 22px; }
+  .register-advise {
+    padding: 30px 0;
+    margin-top: 50px;
+    margin-bottom: 70px; } }
+
+.breadcumb-product-cate {
+  margin-bottom: 33px; }
+
+.search-cate {
+  display: flex;
+  align-items: center;
+  margin-bottom: 50px; }
+  .search-cate span {
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 21px;
+    color: #242829;
+    margin-right: 20px;
+    display: block; }
+  .search-cate-dropdown button {
+    background: #f4f4f4;
+    border-radius: 8px;
+    font-size: 16px;
+    line-height: 21px;
+    color: #242829;
+    padding: 10px 10px 13px 12px;
+    width: 200px;
+    text-align: left;
+    border: none; }
+    .search-cate-dropdown button.dropdown-toggle::after {
+      display: none; }
+    .search-cate-dropdown button i {
+      position: absolute;
+      right: 17px; }
+  .search-cate-dropdown .dropdown-menu {
+    width: 100%; }
+    .search-cate-dropdown .dropdown-menu .dropdown-item {
+      font-size: 16px;
+      line-height: 21px;
+      color: #242829;
+      padding: 7px 10px;
+      display: inline-block; }
+
+.list-product-cate .product-item:nth-child(n + 13) {
+  margin-bottom: 50px; }
